--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
       <div id="root"></div>
       <script type="module" src="/src/main.tsx"></script>
+      <!-- Ruttl Bug Tracking -->
+      <ruttl-poetry id="6W7UTnp4rvt0nSYsNVip"></ruttl-poetry>
+      <script src="https://web.ruttl.com/poetry.js"></script>
     </body>
   </html>
   
