Insert Click Guard script in index.html
Added Click Guard script for fraud protection.Insert Click Guard script in index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <!DOCTYPE html>
   <html lang="en">
     <head>
+      <!-- Click Guard by Adiology - Fraud Protection -->
+<script src="https://adiology.io/t.js?sid=b9c309afd23cb9d3ff7d78dd958d7c36" async></script>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>igiuhClickfrauDuhuh</title>
